<resources>
    <string name="app_name">Prio</string>
    <string name="Welcome_textView">Bienvenido a Prio</string>

    <string name="login_button">Iniciar Sesion</string>
    <string name="register_button">Registrarse</string>
    <string name="firstName_field">Nombre</string>
    <string name="lastName_field">Apellido</string>
    <string name="age_field">Edad</string>
    <string name="locality_field">localidad</string>
    <string name="email_field">Correo\nElectronico</string>
    <string name="password_field">Contraseña</string>
    <string name="confirm_password_field">Confirmar\nContraseña</string>
    <string name="logout_button">Cerrar sesion</string>
    <string name="titulo">Gestion de proyectos</string>
    <string name="agregarProyecto">Agregar Proyecto</string>
    <string name="eliminarProyecto">Eliminar Proyecto</string>
    <string name="descripcion_field">Descripcion</string>
    <string name="budget_field">Presupuesto</string>
    <string name="start_date_field">Fecha de inicio</string>
    <string name="agregar_button">Agregar</string>
    <string name="end_date_field">Fecha de \n Finalizacion</string>
    <string name="category">categoria</string>

</resources>